--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,1 +1,6 @@
-<p>welcome works!</p>
+<span>
+    Calibration Status: {{ calibration$ | async }}
+</span>
+
+<button (click)="invalid()">Invalid</button>
+<button (click)="noPerson()">No Person</button>
