--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -1,1 +1,7 @@
-<app-welcome></app-welcome>
+<div style="margin: -8px;">
+    <video muted="true" autoplay="true" width="100" height="100" #videoElm style="display: none;"></video>
+    <!-- <div>
+        <app-welcome></app-welcome>
+    </div> -->
+    
+</div>
