--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -1,7 +1,9 @@
-<div style="margin: -8px;">
-    <video muted="true" autoplay="true" width="100" height="100" #videoElm style="display: none;"></video>
-    <!-- <div>
+<div>
+    <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
+    <div>
         <app-welcome></app-welcome>
-    </div> -->
+    </div>
+
+    <div id="phaser-canvas"></div>
     
 </div>
