--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -6,3 +6,12 @@
     position: absolute;
     z-index: 1;
 }
+
+app-widget-calibration {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 2;
+    padding: 16px;
+    background-color: #FFFFFF;
+}
