--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
+// @include "node"
+@import "@webpixels/css/core/functions";
+
+// Your theme's variables
+// @import "./app/variables";
+
+// Webpixels' CSS
+@import "@webpixels/css/base";
+@import "@webpixels/css/forms";
+@import "@webpixels/css/components";
+@import "@webpixels/css/utilities";
+
+
+
 body {
     margin: 0;
     background-color: #000;
