--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -2,5 +2,5 @@
     <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
     <div id="phaser-canvas"></div>
     <app-widget-calibration></app-widget-calibration>
-    <app-spotlight></app-spotlight>
+    <app-spotlight style="position: absolute; top: 30px; left: 30px; background: #FFF; color: #4b4b4b;"></app-spotlight>
 </div>
