--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <span>
-    Calibration Status: {{ calibration$ | async }}
+    Calibration Status: {{ test$ | async }}
 </span>
 
-<button (click)="invalid()">Invalid</button>
-<button (click)="noPerson()">No Person</button>
+<button (click)="invalid()">Aman</button>
+<button (click)="noPerson()">Gautam</button>
