--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -1,4 +1,4 @@
-<div>
+<div #sessionElm>
     <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
     <div id="phaser-canvas"></div>
     <app-widget-calibration></app-widget-calibration>
