guide widget integrated with redux

--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -3,4 +3,5 @@
     <div id="phaser-canvas"></div>
     <app-widget-calibration></app-widget-calibration>
     <app-spotlight></app-spotlight>
+    <app-guide></app-guide>
 </div>
