--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -22,3 +22,12 @@ app-spotlight {
     top: calc(50vh - 60px); 
     z-index: 3;
 }
+
+app-guide {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 2;
+    padding: 16px;
+    background-color: #FFFFFF;
+}
