--- a/src/app/widgets/spotlight/spotlight.component.scss
+++ b/src/app/widgets/spotlight/spotlight.component.scss
@@ -1,7 +1,9 @@
+@import "/src/app/variables";
+
 h1 {
     color: #FFF;
     font-size: 4rem;
     text-align: center;
-    background: rgb(2, 0, 139);
+    background: $primary;
     padding: 3rem;
 }
