--- a/src/app/widgets/announcement/announcement.component.html
+++ b/src/app/widgets/announcement/announcement.component.html
@@ -1,4 +1,4 @@
 <span class="announcement display-1 p-4 text-center text-white d-inline-flex p-2 justify-content-center align-items-center"
      [style.backgroundColor]="background">
-    Let's Go.
+    {{ text }}
 </span>
