--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -7,5 +7,7 @@
         <app-announcement *ngIf="currentMessage.type =='announcement'" [text]="currentMessage.text"></app-announcement>
 
         <app-pre-session-survey (selected)="showNextStep()" *ngIf="currentMessage.type =='pre-session-survey'"></app-pre-session-survey>
+
+        <app-select-genre (selected)="showNextStep()" *ngIf="currentMessage.type =='select-genre'"></app-select-genre>
     </div>
 </div>
