--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -1,4 +1,14 @@
-<div class="guide" [hidden]="!messageTitle && !messageBody">
+<!-- <div class="guide" [hidden]="!messageTitle && !messageBody">
     <h1>{{ messageTitle }}</h1>
     <p>{{messageBody}}</p>
+</div> -->
+
+
+
+
+<div class="guide  d-flex justify-content-center align-items-center">
+    <div class="row guide-container-center bg-primary justify-content-left p-5" [ngClass]="{'faded': faded}">
+        <h1 class="text-white content">this is cool. this is cool. this is cool. this is cool. this is cool. this is cool. </h1>
+    </div>
+    
 </div>
