--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -2,8 +2,8 @@
     <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
     <div id="phaser-canvas"></div>
     <!-- <app-widget-calibration></app-widget-calibration> -->
-    <!-- <app-spotlight></app-spotlight>
-    <app-guide></app-guide> -->
+    <!-- <app-spotlight></app-spotlight> -->
+    <!-- <app-guide></app-guide>  -->
     <!-- <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2> -->
     <div style="position: fixed; right: 0; top: 0; bottom: 0; margin-top: auto; margin-bottom: auto;">
         <button class="btn btn-light mb-5 mt-5" (click)="startCalibration()">Start Calibration Scene</button>
