--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -25,7 +25,7 @@ app-spotlight {
 
 app-guide {
     position: absolute;
-    top: 30px;
-    left: 30px;
     z-index: 2;
+    width: 100vw;
+    height: 100vh;
 }
