--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -4,14 +4,14 @@
     <!-- <app-widget-calibration></app-widget-calibration> -->
     <!-- <app-spotlight></app-spotlight> -->
     <app-guide></app-guide> 
-    <!-- <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2> -->
+    <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2>
     <img style="padding: 10px; cursor: pointer; position: fixed; right: 0; top: 0; bottom: 0;" [ngStyle]="{'visibility': isEndSessionVisible ? 'visible': 'hidden'}" src="assets/images/xmark-solid-red.svg" width="70px" (click)="sendSessionEndedEvent()">
-    <div style="position: fixed; right: 0; top: 100px; bottom: 0; margin-top: auto; margin-bottom: auto; text-align: right;">
+    <!-- <div style="position: fixed; right: 0; top: 100px; bottom: 0; margin-top: auto; margin-bottom: auto; text-align: right;">
         <br>
         <button class="btn btn-light mb-5 mt-5" (click)="startCalibration()">Start Calibration Scene</button>
         <br>
         <button class="btn btn-light mt-5" (click)="startSit2Stand()">Start Sit2Stand Scene</button>
         <br>
         <button class="btn btn-light mt-5" [disabled]="!sessionEnded" (click)="sendSessionEndedEvent()">End End Session</button>
-    </div>
+    </div> -->
 </div>
