--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -1,20 +1,20 @@
-<div class="guide" [hidden]="!messageTitle && !messageBody">
+<!-- <div class="guide" [hidden]="!messageTitle && !messageBody">
     <h1>{{ messageTitle }}</h1>
     <p>{{messageBody}}</p>
 </div>
 
+ -->
 
 
 
-<!-- 
-<div class="guide  d-flex justify-content-center align-items-center" *ngIf="false">
+<!-- <div class="guide  d-flex justify-content-center align-items-center" >
     <div class="row guide-container-center bg-primary justify-content-left p-5" [ngClass]="{'faded': faded}">
         <h1 class="text-white content">this is cool. this is cool. this is cool. this is cool. this is cool. this is cool. </h1>
     </div>
-</div>
-<div  class="guide  d-flex justify-content-start align-items-end" style="position: relative; top: -120px">
+</div> -->
+<div  class="guide guide-bottom  d-flex justify-content-start align-items-end" *ngIf="messageBody || messageTitle" style="position: relative; top: -60px">
     <div class="guide-bottom row guide-container-bottom bg-primary justify-content-left p-5">
-        <div class="display-1"> {{ messageTitle}}</div>
+        <div class="display-3 text-white"> {{ messageTitle}}</div>
         <h1 class="text-white content"> {{ messageBody }}</h1>
     </div>
-</div> -->
+</div>
