--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -29,3 +29,13 @@ app-guide {
     width: 100vw;
     height: 100vh;
 }
+
+#close-session {
+    padding: 10px; 
+    cursor: pointer; 
+    position: fixed; 
+    right: 0; 
+    top: 0; 
+    bottom: 0;
+    z-index: 3;
+}
