mirrored input video

--- a/src/app/pages/session/session.component.scss
+++ b/src/app/pages/session/session.component.scss
@@ -1,5 +1,10 @@
 #webcam {
     position: absolute;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    /* Safari and Chrome */
+    -moz-transform: rotateY(180deg);
+    /* Firefox */
 }
 
 #phaser-canvas {
