--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -5,12 +5,13 @@
     <!-- <app-spotlight></app-spotlight> -->
     <app-guide></app-guide> 
     <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2>
-    <img [ngStyle]="{'visibility': isEndSessionVisible ? 'visible': 'hidden'}" 
+    <img *ngIf="isEndSessionVisible" 
         src="assets/images/xmark-solid-red.svg" 
         id="close-session"
         width="70px"
         (click)="sendSessionEndedEvent()"
     >
+
     <!-- <div style="position: fixed; right: 0; top: 100px; bottom: 0; margin-top: auto; margin-bottom: auto; text-align: right;">
         <br>
         <button class="btn btn-light mb-5 mt-5" (click)="startCalibration()">Start Calibration Scene</button>
