--- a/src/app/_custom.scss
+++ b/src/app/_custom.scss
@@ -1,4 +1,6 @@
+@import '/src/app/variables';
+
 body {
     margin: 0;
-    background-color: #000;
+    background-color: darken($primary, 10%);
 }
