--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -1,3 +1,37 @@
+
+
+ <div class="guide">
+    <div #messageCenter *ngIf="state.message?.position == 'center'" class="message-center">
+        {{ state.message?.text }}
+    </div>
+    <div #messageBottom *ngIf="state.message?.position == 'bottom'" class="message-bottom">
+        {{ state.message?.text }}
+    </div>
+    <div #avatar class="avatar {{avatarPosition}}" *ngIf="state.avatar">
+        <img [src]="'assets/images/'+ state.avatar?.name+'.jpg'" alt="">
+    </div>
+ </div>
+
+ <div class="spotlight d-flex justify-content-center align-items-center">
+     <div class="display-container p-6">
+        <div class="display-1 text-white text-center ">This is some text. This is some text. This is some text</div>
+     </div>
+ </div>
+
+
+<!-- <div class="guide-prompt d-flex justify-content-center align-items-center">
+    <div class="card">
+        <div class="card-header text-center">
+            <fa-icon [icon]="icon" size="6x"></fa-icon>
+        </div>
+        <div class="card-body text-center">
+            <h2>Move Right/Move Right</h2>
+        </div>
+    </div>
+</div> -->
+
+
+
 <!-- <div class="guide" [hidden]="!messageTitle && !messageBody">
     <h1>{{ messageTitle }}</h1>
     <p>{{messageBody}}</p>
@@ -6,15 +40,19 @@
  -->
 
 
-
-<!-- <div class="guide  d-flex justify-content-center align-items-center" >
+ <!-- <div class="fwh guide-center d-flex justify-content-center align-items-center">
     <div class="row guide-container-center bg-primary justify-content-left p-5" [ngClass]="{'faded': faded}">
         <h1 class="text-white content">this is cool. this is cool. this is cool. this is cool. this is cool. this is cool. </h1>
     </div>
 </div> -->
-<div  class="guide guide-bottom  d-flex justify-content-start align-items-end" *ngIf="messageBody || messageTitle" style="position: relative; top: -60px">
+
+
+
+
+
+<!-- <div  class="guide guide-bottom  d-flex justify-content-start align-items-end" style="position: relative; top: -60px">
     <div class="guide-bottom row guide-container-bottom bg-primary justify-content-left p-5">
         <div class="display-3 text-white"> {{ messageTitle}}</div>
         <h1 class="text-white content"> {{ messageBody }}</h1>
     </div>
-</div>
+</div> -->
