optimizing avatar and message

--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -12,11 +12,11 @@
     </div>
  </div>
 
- <!-- <div class="spotlight d-flex justify-content-center align-items-center">
+ <div class="spotlight d-flex justify-content-center align-items-center" *ngIf="state.spotlight?.text">
      <div class="display-container p-6">
-        <div class="display-1 text-white text-center ">This is some text. This is some text. This is some text</div>
+        <div class="display-1 text-white text-center ">{{ state.spotlight?.text }}</div>
      </div>
- </div> -->
+ </div>
 
 
 <!-- <div class="guide-prompt d-flex justify-content-center align-items-center">
