guide spotlight implemented w/o animation

--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -4,6 +4,8 @@
         <button class="btn btn-primary" (click)="changeAvatar()">Change Avatar</button>
         <button class="btn btn-primary" (click)="hideAvatar()">Hide Avatar</button>
         <button class="btn btn-primary" (click)="sendMessage()">Send Message</button>
-        <button class="btn btn-primary" (click)="hideMessage()">hide MSg</button>
+        <button class="btn btn-primary" (click)="hideMessage()">hide msg</button>
+        <button class="btn btn-primary" (click)="sendSpotlight()">Send Spotlight</button>
+        <button class="btn btn-primary" (click)="hideSpotlight()">hide Spotlight</button>
     </div>
 </div>
