prompts implemented in the guide

--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,11 +1,14 @@
 <div class="test">
     <app-guide></app-guide> 
     <div class="float">
-        <button class="btn btn-primary" (click)="changeAvatar()">Change Avatar</button>
-        <button class="btn btn-primary" (click)="hideAvatar()">Hide Avatar</button>
-        <button class="btn btn-primary" (click)="sendMessage()">Send Message</button>
-        <button class="btn btn-primary" (click)="hideMessage()">hide msg</button>
-        <button class="btn btn-primary" (click)="sendSpotlight()">Send Spotlight</button>
-        <button class="btn btn-primary" (click)="hideSpotlight()">hide Spotlight</button>
+        <button class="btn btn-primary me-1" (click)="changeAvatar()">Change Avatar</button>
+        <button class="btn btn-primary me-1" (click)="hideAvatar()">Hide Avatar</button>
+        <button class="btn btn-primary me-1" (click)="sendMessage()">Send Message</button>
+        <button class="btn btn-primary me-1" (click)="hideMessage()">hide msg</button>
+        <button class="btn btn-primary me-1" (click)="sendSpotlight()">Send Spotlight</button>
+        <button class="btn btn-primary me-1" (click)="hideSpotlight()">hide Spotlight</button>
+        <button class="btn btn-primary me-1" (click)="sendPromptWithIcon()">Send Prompt with icon</button>
+        <button class="btn btn-primary me-1" (click)="sendPromptWithNumber()">Send Prompt with number</button>
+        <button class="btn btn-primary me-1" (click)="hidePrompt()">hide Prompt</button>
     </div>
 </div>
