--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -1,10 +1,10 @@
 <div #sessionElm (mousemove)="showEndSession()">
     <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
-    <div id="phaser-canvas"></div>
+    <div id="phaser-canvas" #canvasElm></div>
     <!-- <app-widget-calibration></app-widget-calibration> -->
     <!-- <app-spotlight></app-spotlight> -->
-    <!-- <app-guide></app-guide>  -->
-    <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2>
+    <app-guide></app-guide> 
+    <!-- <h2 [hidden]="!showCelebration" style="color: #FFF; background-color: rgb(4, 4, 153);  padding: 16px; position: absolute; bottom: 60; text-align: center; width: 100%;">Perfect!</h2> -->
     <img *ngIf="isEndSessionVisible" 
         src="assets/images/xmark-solid-red.svg" 
         id="close-session"
