--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -1,7 +1,8 @@
 <div #sessionElm (mousemove)="showEndSession()">
     <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
     <div id="phaser-canvas" #canvasElm></div>
-    <!-- <app-guide></app-guide>  -->
+    <app-guide></app-guide> 
+    <app-announcement *ngIf="announcement" [text]="announcement"></app-announcement>
     <img *ngIf="isEndSessionVisible" 
         src="assets/images/xmark-solid-red.svg" 
         id="close-session"
