implemented manual next poc

--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -9,4 +9,5 @@
         width="70px"
         (click)="sendSessionEndedEvent()"
     >
+    <app-select-genre (selected)="genreSelected($event)" *ngIf="selectGenre"></app-select-genre>
 </div>
