support 2 digit on prompt

--- a/src/app/widgets/guide/guide.component.scss
+++ b/src/app/widgets/guide/guide.component.scss
@@ -94,9 +94,9 @@
             height: 150px;
 
             h2 {
-                font-size: 128px;
+                font-size: 75px;
                 position: relative;
-                top: -40px;
+                // top: -40px;
                 color: #FFF;
                 font-weight: bold;
             }
