video integrated in guide

--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -31,6 +31,11 @@
 </div>
 
 
+<div class="video d-flex justify-content-center align-items-center" *ngIf="state.video">
+    <iframe width="700" height="395" [src]="state.video.url | safe: 'resourceUrl'" title="Sit To Stand" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+</div>
+
+
 
 <!-- <div class="guide" [hidden]="!messageTitle && !messageBody">
     <h1>{{ messageTitle }}</h1>
