--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -10,5 +10,7 @@
         <button class="btn btn-primary me-1" (click)="sendPromptWithIcon()">Send Prompt with icon</button>
         <button class="btn btn-primary me-1" (click)="sendPromptWithNumber()">Send Prompt with number</button>
         <button class="btn btn-primary me-1" (click)="hidePrompt()">hide Prompt</button>
+        <button class="btn btn-primary me-1" (click)="startTimer()">start timer</button>
+        <button class="btn btn-primary me-1" (click)="hideTimer()">hide timer</button>
     </div>
 </div>
