fix: 🐛 add video before the session starts
✅ Closes: SH-196

--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -22,3 +22,25 @@
     height: 100vh;
 }
 
+
+
+.tutorial {
+    // position: fixed;
+    // padding-bottom: 56.25%; /* 16:9 */
+    // height: 0;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    button {
+        z-index: 3;
+        position: absolute;
+        bottom: 64px;
+        right: 32px;
+    }
+}
