--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -9,5 +9,10 @@
         <app-pre-session-survey (selected)="preSessionMoodSelected($event)" *ngIf="currentMessage.type =='pre-session-survey'"></app-pre-session-survey>
 
         <app-select-genre (selected)="genreSelected($event)" *ngIf="currentMessage.type =='select-genre'"></app-select-genre>
+
+        <div class="tutorial" *ngIf="currentMessage.type =='tutorial'">
+            <iframe src="https://www.youtube.com/embed/chw2oMUrh4U?autoplay=1" title="Sit To Stand" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+            <button class="btn btn-primary" (click)="showNextStep()">Skip Video Introduction</button>
+        </div>
     </div>
 </div>
