--- a/src/app/widgets/guide/guide.component.scss
+++ b/src/app/widgets/guide/guide.component.scss
@@ -116,6 +116,27 @@
     z-index: 13;
 }
 
+.video.lg {
+    position: fixed;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    button {
+        z-index: 3;
+        position: absolute;
+        bottom: 160px;
+        right: 32px;
+    }
+}
+
 
 .timer {
     position: fixed;
