fix: 🐛 permission issue while doing parent.postMessage

--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -10,5 +10,5 @@
         (click)="sendSessionEndedEvent()"
     />
   
-    <button *ngIf="sessionEnded" class="btn btn-white btn-lg" id="end-session" style="font-size: 20px;" (click)="sessionEndEvent()">Continue <fa-icon style="padding-left: 30px;" [icon]="chevronRightIcon"></fa-icon> </button>
+    <button *ngIf="sessionEnded" class="btn btn-white btn-lg" id="end-session" style="font-size: 20px;" (click)="sendSessionEndEvent()">Continue <fa-icon style="padding-left: 30px;" [icon]="chevronRightIcon"></fa-icon> </button>
 </div>
