showing indicator if rep is successful

--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,5 +1,5 @@
 <div class="test">
-    <app-guide></app-guide> 
+    <app-guide></app-guide>
     <div class="float">
         <button class="btn btn-primary me-1" (click)="changeAvatar()">Change Avatar</button>
         <button class="btn btn-primary me-1" (click)="hideAvatar()">Hide Avatar</button>
@@ -9,6 +9,7 @@
         <button class="btn btn-primary me-1" (click)="hideSpotlight()">hide Spotlight</button>
         <button class="btn btn-primary me-1" (click)="sendPromptWithIcon()">Send Prompt with icon</button>
         <button class="btn btn-primary me-1" (click)="sendPromptWithNumber()">Send Prompt with number</button>
+        <button class="btn btn-primary me-1" (click)="sendSuccessPrompt()">Send Success Prompt</button>
         <button class="btn btn-primary me-1" (click)="hidePrompt()">hide Prompt</button>
         <button class="btn btn-primary me-1" (click)="startTimer()">start timer</button>
         <button class="btn btn-primary me-1" (click)="hideTimer()">hide timer</button>
